--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -16,5 +16,5 @@ spring.jpa.open-in-view=false
 logging.level.com.example.server=INFO
 logging.level.org.hibernate.type=TRACE
 
-spring.data.redis.host=localhost
+spring.data.redis.host=redis
 spring.data.redis.port=6379
